# rcap_2021_master

carry_my_luggage/config/: 2cml_sentence.txt
carry_my_luggage/src/: 2cml_master_Ver2.py  3cml_master.py  cml_master.py  cml_master_Ver2.py
final_demo/: CMakeLists.txt  package.xml
final_demo/config/: fd_sentence.txt
final_demo/src/: fd_master.py
find_my_mates/: CMakeLists.txt  package.xml
find_my_mates/config/: .guest_name.yaml.swp  guest_name.yaml
find_my_mates/guest_info/: guest_0.yaml  guest_1.yaml
find_my_mates/launch/: fmm_master.launch
find_my_mates/src/: .test.py.swp  descsc.py  fmm_master.py  fmmmod.py  test.py
rcap_2021_master/: CMakeLists.txt  package.xml
yumeko_test/: CMakeLists.txt  package.xml
yumeko_test/launch/: yumeko_inspection.launch
yumeko_test/src/: yumeko_inspection.py
